# Journal_analysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml  requirements.txt
configs/: prompts.yaml
notebooks/: personal.ipynb
src/: dataframe_processing.py  embedding.py
src/diary_analyzer/: dataframe_processing.py  embedding.py  latex.py  ollama_stuff.py  parse_obsidian.py  spelling.py  visualization_personal.py
tests/: conftest.py  test_dataframe.py
